workaround: iOS Safari bugs with thin borders, and collapsed table borders

--- a/components/lexical/theme/theme.module.css
+++ b/components/lexical/theme/theme.module.css
@@ -164,12 +164,12 @@
 }
 
 .divider {
-  width: 1px;
+  min-width: 1px;
   height: 20px;
   background-color: var(--theme-borderColor);
-  opacity: 0.3;
   border-radius: 0.4rem;
   margin: 0 4px;
+  opacity: 0.3;
 }
 
 :global(.dropdown) + .divider {
